<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/medium_padding">



    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/table_header_back">

        <TextView
            android:padding="@dimen/medium_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/statu"
            android:textSize="12sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="2"/>

        <TextView
            android:padding="@dimen/medium_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/times"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_weight="3"/>

        <TextView
            android:padding="@dimen/medium_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/durations"
            android:textSize="12sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="3"/>

        <TextView
            android:padding="@dimen/medium_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/distances"
            android:textSize="12sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="3"/>



    </TableRow>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_status"/>



</LinearLayout>
